--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -267,3 +267,19 @@ main.container
     
 .progress::-webkit-progress-value
     transition: all 0.5s ease
+
+.swipe
+    overflow: hidden
+    visibility: hidden
+    position: relative
+
+.swipe-wrap
+    overflow: hidden
+    position: relative
+
+.swipe-wrap > div
+    float: left
+    width: 100%
+    position: relative
+    overflow: hidden
+
